// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`include module should include styles from a single class name 1`] = `
"
color: orange;

@media (max-width: 100px) {
  font-family: monospace;
}"
`;

exports[`include module should include styles from a single class name 2`] = `
"
font-weight: 400;
color: orange;

@media (max-width: 100px) {
  font-family: monospace;
}"
`;

exports[`include module should include styles from a single class name 3`] = `
"font-weight: 400;
color: orange;

@media (max-width: 100px) {
font-family: monospace;
};
    font-family: sans-serif;"
`;

exports[`include module should include styles from a single class name 4`] = `
".css__n32n50{font-weight:400;}
.css__1adt32q{color:orange;}@media (max-width:100px){.css__1adt32q{font-family:monospace;}}
.css__1xk7l0x{font-weight:400;color:orange;font-family:sans-serif;}@media (max-width:100px){.css__1xk7l0x{font-family:monospace;}}"
`;
